--- a/HTML CSS/Proyecto/index.html
+++ b/HTML CSS/Proyecto/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="SEW WEB PAGE">
     <meta name="keywords" content="HTML, CSS">
     <meta name="author" content="FERNANDO DE LA TORRE CUEVA- UO245182">
-    <title>CAZAFANTASMAS</title>
+    <title>CAZAFANTASMAS 2</title>
 </head>
 
 <body>
